refactor: Remove context ID and related methods; add mapToLiveFragment